# NTEUID

./: README.md  pyproject.toml  ruff.toml
.github/workflows/: main.yml
NTEUID/: __init__.py  version.py
NTEUID/nte_alias/: __init__.py  alias_service.py
NTEUID/nte_code/: __init__.py
NTEUID/nte_config/: config_default.py  nte_config.py  prefix.py
NTEUID/nte_gacha/: __init__.py  adapters.py  gacha_card.py  gacha_help.py  gacha_model.py  gacha_service.py  tap_service.py  xhh_service.py
NTEUID/nte_guide/: __init__.py  guide.py
NTEUID/nte_help/: __init__.py  get_help.py  help.json
NTEUID/nte_login/: __init__.py  bind_service.py  login_router.py  login_service.py  transport.py
NTEUID/nte_notice/: __init__.py  notice.py  notice_card.py  utils.py
NTEUID/nte_role/: __init__.py  achievement_card.py  character_card.py  explore_card.py  realestate_card.py  realtime_card.py  refresh_card.py  role_cache.py  role_card.py  role_meta.py  role_service.py  role_sort.py  role_text.py  vehicle_card.py
NTEUID/nte_sign/: __init__.py  sign_calendar.py  sign_calendar_card.py  sign_records.py  sign_runner.py  sign_service.py
NTEUID/nte_start/: __init__.py
NTEUID/nte_status/: __init__.py
NTEUID/nte_team/: __init__.py  team_card.py  team_service.py
NTEUID/nte_update/: __init__.py  draw_update_log.py
NTEUID/resource/: char_meta.json  role_meta.json
NTEUID/templates/: done.html  login.html
NTEUID/utils/: at.py  cache.py  concurrency.py  constants.py  game_registry.py  image.py  name_convert.py  session.py  utils.py
NTEUID/utils/database/: __init__.py
(+13 files in other folders)
